<resources>
    <string name="app_name">i210813</string>
    <string name="appName_2">me</string>
    <string name="appName_1">mentor</string>
    <string name="appWebsite">connect. ask. learn.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="get_started">Get Started!</string>
    <string name="enter_name">Enter Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password_rules">Password must be at least 8 characters long</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgotPassRules">Don’t worry! It happens. Please enter the email address associated with your account.</string>
    <string name="send">Send</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="reset_password">Reset Password?</string>
    <string name="please_type_a_new_password_and_re_enter_the_password_type_something_you_will_remember">Please type a new password and re-enter the password. Type something you will remember!</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_passwrod">Confirm New Passwrod</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="hi_i_m">Hi, I\'m</string>
    <string name="type_your_experience">Type your experience...</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="drop_me_a_review">Drop me a Review 😊</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about_me">About Me</string>
    <string name="my_expertise_include">My Expertise Include</string>
    <string name="clear_all">Clear All</string>
    <string name="notifications">Notifications</string>
    <string name="booked_sessions">Booked Sessions</string>
    <string name="help_us_expand">Help us expand!</string>
    <string name="add_new_mentor">Add New Mentor</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="add">+</string>
    <string name="search_results">Search Results</string>
    <string name="hdr">HDR</string>
    <string name="photo">Photo</string>
    <string name="square">Square</string>
    <string name="portrait">Portrait</string>
    <string name="video">Video</string>
    <string name="slo_mo">Slo-mo</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="entrepreneurship">Entrepreneurship</string>
    <string name="personal_growth">Personal Growth</string>
    <string name="education">Education</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="type_something">Type something ...</string>
    <string name="chats">Chats</string>
    <string name="my_community">My Community</string>
    <string name="all_messages">All Messages</string>
    <string name="hello">Hello,</string>
    <string name="character">Character</string>
    <string name="ready_for_mentorship_let_s_begin_the_journey">Ready for mentorship? Let’s begin the journey!</string>
    <string name="all">All</string>
    <string name="top_mentors_for_you">Top Mentors for you</string>
    <string name="view_all">View All</string>
    <string name="token">007eJxTYFCNT5S6tE12ht6W769eps08t6VefxqvzyajeQte8m3uW6SowGBqmmpsYWlkZG5oaWxibpFqaZxonpSSmmZhnGiSYphobO3PkNYQyMgweW82MyMDBIL4LAzJiTk5DAwAQ8geyw==</string>
    <string name="appId">55e389227193478e93a7bdef83a4d1a3</string>
    <string name="channel">call</string>
</resources>